--- a/packages/uhk-web/src/app/components/macro/action-editor/tab/key/macro-key.component.scss
+++ b/packages/uhk-web/src/app/components/macro/action-editor/tab/key/macro-key.component.scss
@@ -8,6 +8,7 @@
         &-container {
             border-left: 1px solid var(--color-macro-border);
             padding-left: 2rem;
+            width: 100%;
         }
     }
 }
